methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:7: error: not found: value isVert
  isVert = (getCouleurSol() == Color.green);
  ^SlugTracking:9: error: not found: value isVert
  return isVert;
         ^