methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean =
{
  if (estFaceMur()) return false;
  
  avance();
  isVert = (getCouleurSol() == Color.green);
  recule();
  return isVert;
}